--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,9 @@
         "node": true
     },
     "extends": [
-        "plugin:prettier/recommended",
         "plugin:react/recommended",
-        "airbnb"
+        "airbnb",
+        "prettier"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -21,10 +21,11 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "prettier"
     ],
     "rules": {
-        "arrow-body-style": ["error", "as-needed"],
-        "react/prop-types": 0
+        "prettier/prettier": "error",
+        "arrow-body-style": ["error", "as-needed"]
     }
 }
